animate, hover y backgrounds en products ready

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 MONGODB="mongodb+srv://jsebast1an:odioami12@codercluster18335.rkdid.mongodb.net/ecommerce?retryWrites=true&w=majority"
-CONNECT_MONGO_URL="mongodb+srv://jsebast1an:odioami12@codercluster18335.rkdid.mongodb.net/SessionSample?retryWrites=true&w=majority"
+CONNECT_MONGO_URL="mongodb+srv://jsebast1an:odioami12@codercluster18335.rkdid.mongodb.net/ecommerce?retryWrites=true&w=majority"
