--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemailer": "^6.7.7",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "pug": "^3.0.2",
     "socket.io": "^4.5.1"
   },
   "devDependencies": {
